# ayase

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .releaserc.json  Dockerfile  README.md  compose.yaml  entry.sh  flake.nix  main.py  pyproject.toml  reverse_name.sql
.github/workflows/: deploy.yml  release.yml
alembic/: env.py
alembic/versions/: 15ed16a907c1_.py  418bd0fa4cc9_.py  4dff1f136a47_initial_database.py  6afbe09379d9_.py  78573d61a35f_.py  9b899bbc5c65_.py  a47aedb87673_.py  af630c8e4deb_add_character_favourites.py  bf999bef7299_add_card_tags.py  f380a99b72cb_.py  f596083ad9b5_.py  fa708a3ec141_.py  fbad58a99b7b_.py  fd884fd43dca_.py
ayase/: animes.gql  bot.py  cli.py  labelling.py  models.py  modify.py  query.gql  scrape.py  top.gql  update.gql  utils.py  views.py
ayase/cogs/: admin.py  cards.py  collection.py  misc.py
cogs/: cards.py
