[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ayase"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
    "sqlalchemy>=2.0.31",
    "alembic>=1.13.2",
    "python-dotenv>=1.0.1",
    "psycopg2>=2.9.9",
    "discord-py>=2.4.0",
    "pillow>=10.4.0",
    "click>=8.1.7",
    "requests>=2.32.3",
    "pyfunctional>=1.5.0",
    "tqdm>=4.66.4",
    "emoji>=2.14.1",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.7.1"
]

[project.scripts]
ayase = "ayase.cli:cli"

[tool.setuptools]
packages = ["ayase"]

[tool.autopep8]
ignore = "E501"
